--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -7,6 +7,6 @@
       "@styles/*": ["./styles/*"]
     }
   },
-  "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["dist", ".next", "node_modules"]
 }
