--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,15 +4,11 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "license": "AGPL-3.0 License",
+  "private": true,
   "scripts": {
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
-    "lint": "eslint src/**/*.ts* --fix",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
-  },
-  "publishConfig": {
-    "access": "public"
+    "build": "tsup src/*.tsx --format esm,cjs --dts --external react",
+    "dev": "tsup src/*.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint src/**/*.ts* --fix"
   },
   "sideEffects": false,
   "files": [
