--- a/packages/stitches-config/package.json
+++ b/packages/stitches-config/package.json
@@ -4,15 +4,11 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "license": "AGPL-3.0 License",
+  "private": true,
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
-    "lint": "eslint src/**/*.ts* --fix",
-    "clean": "rm -rf node_modules && rm -rf dist"
-  },
-  "publishConfig": {
-    "access": "public"
+    "lint": "eslint src/**/*.ts* --fix"
   },
   "sideEffects": false,
   "files": [
