--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@muoosic/ts-config/react-library.json",
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.tsx"],
   "exclude": ["dist", "node_modules"]
 }
