--- a/turbo.json
+++ b/turbo.json
@@ -1,29 +1,17 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
+    "dev": {
+      "cache": false
+    },
     "build": {
       "outputs": [
         "dist/**",
-        ".next/**"
+        "storybook-static/**"
       ],
       "dependsOn": [
         "^build"
       ]
-    },
-    "test": {
-      "outputs": [
-        "coverage/**"
-      ],
-      "dependsOn": []
-    },
-    "lint": {
-      "outputs": []
-    },
-    "dev": {
-      "cache": false
-    },
-    "clean": {
-      "cache": false
     }
   }
 }
