--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@muoosic/docs",
-  "version": "1.0.0",
-  "author": "Muoosic Team <jobs@muoosic.com>",
-  "license": "AGPL-3.0 License",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "start-storybook -p 6006",
     "build": "build-storybook",
