--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@muoosic/docs",
   "version": "0.0.0",
+  "license": "UNLICENSED",
   "private": true,
   "scripts": {
     "dev": "start-storybook -p 6006",
